--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html{
-	background-color: #fff;
+	background-color: #c0deed;
 }
 
 
@@ -9,10 +9,16 @@ html{
 	margin: 0 auto;
 	display: block;
 	background-color: white;
-	font-family: "ProximaNova","Helvetica Neue",helvetica,arial,sans-serif;
+	
 
 }
-.tweets{
-	background-color: #FFFFCC;
+nav{
+	background-color: white;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-size: 14px;
 
+}
+#tweet{
+	outline: 1px solid #000;
+	padding: 10px;
 }
