--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,15 @@
 html{
 	background-color: #c0deed;
 }
+.mynav{
+	display: inline;
+	width: 100%;
+}
+.mynav p{
+	
 
+
+}
 
 .nav-bar{
 	position: relative;
@@ -21,4 +29,7 @@ nav{
 #tweet{
 	outline: 1px solid #000;
 	padding: 10px;
+	margin-left: 0px;
+	border-top: 1px solid #aaa;
+
 }
