--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,73 @@
+h1, h2, p, button, a, li{
+	padding: 2px;
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
 html{
 	background-color: #c0deed;
 }
-.mynav{
-	display: inline;
-	width: 100%;
-}
-.mynav p{
-	
-
-
-}
 
 .nav-bar{
-	position: relative;
-	padding: 29px 0 20px 0;
-	margin: 0 auto;
-	display: block;
+	display: inline-block;
+	background-color: #363434;
+	width: 100%; 
+	margin:0;
+
+}
+.nav-bar h1, p, li{
+	color: white;
+}
+.nav-bar li{
+	display: inline;
+}
+.search{
+	border-radius: 15px;
+	margin-left: 20%;
+	box-shadow: 2px 2px;
+	background-color: #BFBDBD;
+    border:solid 1px #BFBDBD;
+    height: 25px;
+    padding-left:10px;
+    width: 20%;
+    box-shadow: 2px 2px 0 #828181 inset;
+}
+.author{
+	float:right;
+	padding-right: 15px;
+}
+
+
+.tweets-and-button{
+	margin-left: 30%;
+	padding right: 50px;
 	background-color: white;
+	border-radius: 15px;
+
+}
+.tweets-and-button p, h2, button, a{
+	margin-left: 15px;
+	color: black;
+
+}
+#single-tweet{
+	border-top: 1px solid gray;
+	padding-bottom: 2px;
 	
+}
+.user-link{
+	margin-top: 5px;
+	padding-top: 5px;
+}
+.time{
+	padding-left: 85%;
+	font-size: 10px;
+	padding-right: 5px;
+}
+p.time{
+	color: gray;
 
 }
-nav{
-	background-color: white;
-	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-size: 14px;
 
-}
-#tweet{
-	outline: 1px solid #000;
-	padding: 10px;
-	margin-left: 0px;
-	border-top: 1px solid #aaa;
 
-}
+
+
+
